[project]
name = "mf-toolbox"            # what users will pip install
version = "0.1.0"
description = "Multi-Fidelity Regression Toolbox"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Atticus Rex", email = "atticusd1@gmail.com" }
]
dependencies = [
    "numpy", "tqdm", "jax", "gaussianprocess", "scikit-learn"
]                     # list of runtime dependencies

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"